tests/neg-macros/i6432b.check

-- Error: tests/neg-macros/i6432b/Test_2.scala:4:8 ---------------------------------------------------------------------
4 |  foo"""abc${"123"}xyz${"456"}fgh""" // error // error // error
  |        ^^^
  |        abc
  | This location contains code that was inlined from Test_2.scala:4
-- Error: tests/neg-macros/i6432b/Test_2.scala:4:19 --------------------------------------------------------------------
4 |  foo"""abc${"123"}xyz${"456"}fgh""" // error // error // error
  |                   ^^^
  |                   xyz
  | This location contains code that was inlined from Test_2.scala:4
-- Error: tests/neg-macros/i6432b/Test_2.scala:4:30 --------------------------------------------------------------------
4 |  foo"""abc${"123"}xyz${"456"}fgh""" // error // error // error
  |                              ^^^
  |                              fgh
  | This location contains code that was inlined from Test_2.scala:4
